--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <div class="container">
         <canvas id="wheel"></canvas>
-        <button id="spin-btn">Spin</button>
+        <button id="spin-btn">GIRAR</button>
       </div>
       <div id="final-value">
         <p>Girame :)</p>
